Add db connect and user register logic
